--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
               <br>
               <em>IEEE International Conference on Unmanned Systems (<strong>ICUS</strong>) 2023</em>
               <br>
-              <a href=https://drive.google.com/file/d/11aZzIfDucUh1hml2ibMHnEq5nx34NWko/view?usp=drive_link>[PDF]</a> 
-              <a https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> 
+              <a href=https://drive.google.com/file/d/11aZzIfDucUh1hml2ibMHnEq5nx34NWko/view?usp=drive_link>[PDF]</a>
+<a href=https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> 
               <p></p>
             </td>
          </tr>
