--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <a>Yi Yang</a>,
               <a>Yufeng Yue</a>,
               <br>
-              <em><strong>Arxiv</strong> 2024</em>
+              <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
               <a href=https://arxiv.org/pdf/2406.08009.pdf>[PDF]</a> 
               <a href="https://arxiv.org/abs/2406.08009">[Arxiv]</a> 
