--- a/index.html
+++ b/index.html
@@ -53,7 +53,33 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-<tr>
+
+          
+          <tr>
+            <td style="padding:10px;width:40%;vertical-align:middle">
+              <img src='images/openobject-nav.jpg' width="100%">
+            </td>
+            <td style="padding:20px;width:70%;vertical-align:middle">
+              <papertitle>OpenObject-NAV: Open-Vocabulary Object-Oriented Navigation Based on Dynamic Carrier-Relationship Scene Graph</papertitle>
+              <br>
+              <a> Yujie Tang</a>,
+              <a> Meiling Wang</a>,
+              <strong>Yinan Deng</strong>,
+              <a> Zibo Zheng</a>,
+              <a>Jiagui Zhong</a>,
+              <a>Yufeng Yue</a>,
+              <br>
+              <em><strong>Arxiv</strong> 2024</em>
+              <br>
+              <a href="https://arxiv.org/pdf/2409.18743.pdf">[PDF]</a> 
+              <a href="https://arxiv.org/abs/2409.18743">[Arxiv]</a> 
+              <a href="https://openobject-nav.github.io/">[Project]</a> 
+              <p></p>
+            </td>
+         </tr>
+
+
+        <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
               <img src='images/lcp-fusion.png' width="100%">
             </td>
@@ -67,7 +93,8 @@
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2024</em>
               <br>
-	     <a href=https://arxiv.org/pdf/2411.03610>[PDF]</a > 
+	            <a href="https://arxiv.org/pdf/2411.03610">[PDF]</a > 
+              <a href="https://arxiv.org/abs/2411.03610">[Arxiv]</a > 
               <p></p >
             </td>
          </tr>
@@ -88,7 +115,7 @@
               <br>
               <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
-              <a href=https://arxiv.org/pdf/2406.08009.pdf>[PDF]</a> 
+              <a href="https://arxiv.org/pdf/2406.08009.pdf">[PDF]</a> 
               <a href="https://arxiv.org/abs/2406.08009">[Arxiv]</a> 
               <a href="https://github.com/BIT-DYN/OpenObj">[Code]</a> 
               <a href="https://openobj.github.io/">[Project]</a> 
@@ -114,7 +141,7 @@
               <br>
               <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
-              <a href=https://arxiv.org/pdf/2403.09412.pdf>[PDF]</a> 
+              <a href="https://arxiv.org/pdf/2403.09412.pdf">[PDF]</a> 
               <a href="https://arxiv.org/abs/2403.09412">[Arxiv]</a> 
               <a href="https://github.com/BIT-DYN/OpenGraph">[Code]</a> 
               <p></p>
@@ -136,7 +163,7 @@
               <br>
               <em><strong>Arxiv</strong> 2024</em>
               <br>
-              <a href=https://arxiv.org/pdf/2404.05187>[PDF]</a> 
+              <a href="https://arxiv.org/pdf/2404.05187">[PDF]</a> 
               <a href="https://arxiv.org/abs/2404.05187">[Arxiv]</a> 
               <a href="https://github.com/BIT-DYN/LGSDF">[Code]</a> 
               <p></p>
@@ -159,7 +186,7 @@
               <br>
               <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
-              <a href=https://drive.google.com/file/d/1Y0tJIY4uLdCNG98D8oiAl4SN65uC9Aff/view>[PDF]</a> 
+              <a href="https://drive.google.com/file/d/1Y0tJIY4uLdCNG98D8oiAl4SN65uC9Aff/view">[PDF]</a> 
               <a href="https://ieeexplore.ieee.org/document/10476626">[IEEE]</a> 
               <a href="https://github.com/BIT-DYN/MACIM">[Code]</a> 
               <p></p>
@@ -182,7 +209,7 @@
               <br>
               <em>IEEE Transactions on Industrial Electronics (<strong>TIE</strong>) 2024</em>
               <br>
-              <a href=https://drive.google.com/file/d/1vji6cXKYuk5F8sI14og4HjPpiCddPoaS/view?usp=drive_link>[PDF]</a> 
+              <a href="https://drive.google.com/file/d/1vji6cXKYuk5F8sI14og4HjPpiCddPoaS/view?usp=drive_link">[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/document/10093797">[IEEE]</a> 
               <a href="https://github.com/BIT-DYN/SEE-CSOM">[Code]</a> 
               <p></p>
@@ -205,7 +232,7 @@
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2023</em>
               <br>
-              <a href=https://drive.google.com/file/d/1tJfo73CLZdGeB0jxwlJei6UmEks6PU72/view?usp=drive_link>[PDF]</a> 
+              <a href="https://drive.google.com/file/d/1tJfo73CLZdGeB0jxwlJei6UmEks6PU72/view?usp=drive_link">[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/10342524">[IEEE]</a> 
               <a href="https://github.com/BIT-TYJ/HORCL">[Code]</a> 
               <p></p>
@@ -227,7 +254,7 @@
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2023</em>
               <br>
-              <a href=https://drive.google.com/file/d/17sVx9W4QnUkjaMr61PFwpuxzT1yml2uX/view?usp=drive_link>[PDF]</a> 
+              <a href="https://drive.google.com/file/d/17sVx9W4QnUkjaMr61PFwpuxzT1yml2uX/view?usp=drive_link">[PDF]</a> 
               <a href=https://ieeexplore.ieee.org/abstract/document/10342317">[IEEE]</a> 
               <a href="https://github.com/BIT-TYJ/SSGM">[Code]</a> 
               <p></p>
@@ -252,8 +279,8 @@
               <br>
               <em>IEEE International Conference on Unmanned Systems (<strong>ICUS</strong>) 2023</em>
               <br>
-              <a href=https://drive.google.com/file/d/11aZzIfDucUh1hml2ibMHnEq5nx34NWko/view?usp=drive_link>[PDF]</a>
-<a href=https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> 
+              <a href="https://drive.google.com/file/d/11aZzIfDucUh1hml2ibMHnEq5nx34NWko/view?usp=drive_link">[PDF]</a>
+              <a href="https://ieeexplore.ieee.org/abstract/document/10318246">[IEEE]</a> 
               <p></p>
             </td>
          </tr>
@@ -274,8 +301,8 @@
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2022</em>
               <br>
-              <a href=https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9981756>[PDF]</a> 
-              <a href=https://ieeexplore.ieee.org/abstract/document/9981756">[IEEE]</a> 
+              <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9981756">[PDF]</a> 
+              <a href="https://ieeexplore.ieee.org/abstract/document/9981756">[IEEE]</a> 
               <a href="https://github.com/BIT-DYN/HD-CCSOM">[Code]</a> 
               <p></p>
             </td>
@@ -298,8 +325,8 @@
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2022</em>
               <br>
-              <a href=https://drive.google.com/file/d/16fpqzUqQAHrn9fpw3qczrCvaX6Hfaisz/view?pli=1>[PDF]</a> 
-              <a href=https://ieeexplore.ieee.org/abstract/document/9982101">[IEEE]</a> 
+              <a href="https://drive.google.com/file/d/16fpqzUqQAHrn9fpw3qczrCvaX6Hfaisz/view?pli=1">[PDF]</a> 
+              <a href="https://ieeexplore.ieee.org/abstract/document/9982101">[IEEE]</a> 
               <p></p>
             </td>
          </tr>
@@ -342,6 +369,7 @@
           </td>
         </tr>
       </tbody></table>
+
         
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
