--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <td style="padding:20px;width:70%;vertical-align:middle">
               <papertitle>S-MKI: Incremental Dense Semantic Occupancy Reconstruction Through Multi-Entropy Kernel Inference</papertitle>
               <br>
-	      <strong>Yinan Deng</strong>,
+	            <strong>Yinan Deng</strong>,
               <a> Meiling Wang</a>,
               <a>Danwei Wang</a>,
               <a>Yufeng Yue</a>,
@@ -341,7 +341,7 @@
               <li>IEEE Student Member</li>
             </p>
             <p>
-              <li>Sectional Student Representative of RAS (IEEE Robotics and Automation Society)</li>
+              <li> <strong>Sectional Student Representative of RAS (IEEE Robotics and Automation Society)</strong></li>
             </p>
           </td>
         </tr>
@@ -366,6 +366,9 @@
             <p>
               <li>IEEE/RSJ International Conference on Robotics and Automation (<strong>ICRA</strong>) 2024 Reviewer</li>
             </p>
+            <p>
+              <li>IEEE/RSJ International Conference on Robotics and Automation (<strong>ICRA</strong>) 2025 Reviewer</li>
+            </p>
           </td>
         </tr>
       </tbody></table>
@@ -377,13 +380,13 @@
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
             <p>
-              <li>2024: Baosteel Education Scholarship </li>
+              <li><strong>2024: Baosteel Education Scholarship</strong> </li>
             </p>
             <p>
               <li>2023: Outstanding Students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2022: National Scholarship, China </li>
+              <li><strong>2022: National Scholarship, China</strong> </li>
             </p>
             <p>
               <li>2021: Outstanding Graduate, Beijing Institute of Technology </li>
@@ -392,10 +395,10 @@
               <li>2020: Outstanding Students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2019: Divine Scholarship</li>
+              <li><strong>2019: Divine Scholarship</strong></li>
             </p>
             <p>
-              <li>2019: National Scholarship, China </li>
+              <li><strong>2019: National Scholarship, China </strong></li>
             </p>
             <p>
               <li>2018: Outstanding Students, Beijing Institute of Technology </li>
@@ -404,7 +407,7 @@
               <li>2017: Outstanding Students, Beijing Institute of Technology </li>
             </p>
             <p>
-              <li>2015: Outstanding Students, Hebei Province </li>
+              <li><strong>2015: Outstanding Students, Hebei Province</strong> </li>
             </p>
             
           </td>
