--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
           </tr>
           <td style="padding-left:20px;width:100%;vertical-align:middle">
             <p>
-              <li><strong>2024: Baosteel Education Scholarship</strong> </li>
+              <li><strong>2024: Baosteel Education Scholarship (only 500 recipients nationwide)</strong> </li>
             </p>
             <p>
               <li>2023: Outstanding Students, Beijing Institute of Technology </li>
