--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                   <a href="images/dengyinan.jpg">
                     <img style="width:50%;max-width:100%; display: block;" alt="profile photo" src="images/dengyinan.jpg" class="hoverZoomLink">
                   </a>
-                  <!-- 第二个图片 -->
-                  <img src="https://badges.toozhao.com/badges/01JDM7N5Q2S23FW6MWP0M5GFZ0/green.svg" style="margin-top: 5px; display: block;">
+                  <a href="https://badges.toozhao.com/stats/01JDM7N5Q2S23FW6MWP0M5GFZ0" title="Get your own page views count badge on badges.toozhao.com">
+                    <img src="https://badges.toozhao.com/badges/01JDM7N5Q2S23FW6MWP0M5GFZ0/green.svg" style="margin-top: 5px; display: block;">
+                </a>                
                 </div>
               </td>                        
           </tr>
