--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
               <br>
               <a href="https://arxiv.org/pdf/2403.09412.pdf">[PDF]</a> 
               <a href="https://arxiv.org/abs/2403.09412">[Arxiv]</a> 
+              <a href="https://ieeexplore.ieee.org/document/10638699">[IEEE]</a> 
               <a href="https://github.com/BIT-DYN/OpenGraph">[Code]</a> 
-              <p></p>
             </td>
          </tr>
 
 
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
-              <img src='images/LGSDF.jpg' width="100%">
+              <img src='images/lgsdf.gif' width="100%">
             </td>
             <td style="padding:20px;width:70%;vertical-align:middle">
               <papertitle>LGSDF: Continual Global Learning of Signed Distance Fields Aided by Local Updating</papertitle>
@@ -173,6 +173,7 @@
               <a href="https://arxiv.org/pdf/2404.05187">[PDF]</a> 
               <a href="https://arxiv.org/abs/2404.05187">[Arxiv]</a> 
               <a href="https://github.com/BIT-DYN/LGSDF">[Code]</a> 
+              <a href="https://LGSDF.github.io">[Project]</a> 
               <p></p>
             </td>
          </tr>
