--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@
 
 
           
+         <tr>
+          <td style="padding:10px;width:40%;vertical-align:middle">
+            <img src='images/lgsdf.gif' width="100%">
+          </td>
+          <td style="padding:20px;width:70%;vertical-align:middle">
+            <papertitle>LGSDF: Continual Global Learning of Signed Distance Fields Aided by Local Updating</papertitle>
+            <br>
+            <a>Yufeng Yue*</a>,
+      <strong>Yinan Deng</strong>,
+            <a> Jiahui Wang</a>,
+            <a> Yi Yang</a>,
+            <br>
+            <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2025</em>
+            <br>
+            <a href="https://arxiv.org/pdf/2404.05187">[PDF]</a> 
+            <a href="https://arxiv.org/abs/2404.05187">[Arxiv]</a> 
+            <a href="https://github.com/BIT-DYN/LGSDF">[Code]</a> 
+            <a href="https://LGSDF.github.io">[Project]</a> 
+            <p></p>
+          </td>
+       </tr>
+
+
           <tr>
             <td style="padding:10px;width:40%;vertical-align:middle">
               <img src='images/openvox.gif' width="100%">
@@ -70,10 +93,10 @@
               <papertitle>OpenVox: Real-time Instance-level Open-vocabulary Probabilistic Voxel Representation</papertitle>
               <br>
               <strong>Yinan Deng</strong>,
-              <a> Bicheng Yao</a>,
-              <a> Yihang Tang</a>,
+              <a> Bicheng Yao†</a>,
+              <a> Yihang Tang†</a>,
               <a> Yi Yang</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em><strong>Under Review</strong> 2025</em>
               <br>
@@ -97,7 +120,7 @@
               <strong>Yinan Deng</strong>,
               <a> Zibo Zheng</a>,
               <a>Jingchuan Deng</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em><strong>Under Review</strong> 2025</em>
               <br>
@@ -120,7 +143,7 @@
               <strong>Yinan Deng</strong>,
               <a> Zibo Zheng</a>,
               <a>Jiagui Zhong</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em><strong>Under Review</strong> 2025</em>
               <br>
@@ -145,7 +168,7 @@
               <a> Jingyu Zhao</a>,
               <a> Jianyu Dou</a>,
               <a>Yi Yang</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
@@ -172,7 +195,7 @@
               <a> Xinyu Tian</a>,
               <a> Guangyan Chen</a>,
               <a>Yi Yang</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
@@ -196,7 +219,7 @@
               <a> Yujie Tang</a>,
               <a>Yi Yang</a>,
               <a>Danwei Wang</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2024</em>
               <br>
@@ -208,28 +231,6 @@
          </tr>
 
          
-
-         <tr>
-          <td style="padding:10px;width:40%;vertical-align:middle">
-            <img src='images/lgsdf.gif' width="100%">
-          </td>
-          <td style="padding:20px;width:70%;vertical-align:middle">
-            <papertitle>LGSDF: Continual Global Learning of Signed Distance Fields Aided by Local Updating</papertitle>
-            <br>
-            <a>Yufeng Yue</a>,
-      <strong>Yinan Deng</strong>,
-            <a> Jiahui Wang</a>,
-            <a> Yi Yang</a>,
-            <br>
-            <em><strong>Under Review</strong> 2024</em>
-            <br>
-            <a href="https://arxiv.org/pdf/2404.05187">[PDF]</a> 
-            <a href="https://arxiv.org/abs/2404.05187">[Arxiv]</a> 
-            <a href="https://github.com/BIT-DYN/LGSDF">[Code]</a> 
-            <a href="https://LGSDF.github.io">[Project]</a> 
-            <p></p>
-          </td>
-       </tr>
 
 
           <tr>
@@ -243,7 +244,7 @@
               <a> Meiling Wang</a>,
               <a>Yi Yang</a>,
               <a>Danwei Wang</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em>IEEE Transactions on Industrial Electronics (<strong>TIE</strong>) 2024</em>
               <br>
@@ -266,7 +267,7 @@
       <a>Jiahui Wang</a >,
       <strong>Yinan Deng</strong>,
       <a>Yi Yang</a >,
-            <a>Yufeng Yue*</a>,
+            <a>Yufeng Yue**</a>,
             <br>
             <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2024</em>
             <br>
@@ -291,7 +292,7 @@
           <a>Jiahui Wang</a>,
           <a>Ruina Dang</a>,
           <a>Yi Yang</a>,
-          <a>Yufeng Yue</a>,
+          <a>Yufeng Yue*</a>,
           <br>
           <em>IEEE International Conference on Unmanned Systems (<strong>ICUS</strong>) 2024</em>
           <br>
@@ -315,7 +316,7 @@
 	      <strong>Yinan Deng</strong>,
               <a>Yi Yang</a>,
               <a>Ziquan Lan</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2023</em>
               <br>
@@ -337,7 +338,7 @@
               <a> Meiling Wang</a>,
 	      <strong>Yinan Deng</strong>,
               <a>Yi Yang</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2023</em>
               <br>
@@ -361,7 +362,7 @@
               <a>Yujie Tang</a>,
 	      <strong>Yinan Deng</strong>,
               <a>Xinyu Tian</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <a>Yi Yang</a>,
               <br>
               <em>IEEE International Conference on Unmanned Systems (<strong>ICUS</strong>) 2023</em>
@@ -384,7 +385,7 @@
 	      <strong>Yinan Deng</strong>,
               <a> Meiling Wang</a>,
               <a>Yi Yang</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2022</em>
               <br>
@@ -408,7 +409,7 @@
 	            <strong>Yinan Deng</strong>,
               <a> Meiling Wang</a>,
               <a>Danwei Wang</a>,
-              <a>Yufeng Yue</a>,
+              <a>Yufeng Yue*</a>,
               <br>
               <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<strong>IROS</strong>) 2022</em>
               <br>
