--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           <td style="padding:20px;width:70%;vertical-align:middle">
             <papertitle>LGSDF: Continual Global Learning of Signed Distance Fields Aided by Local Updating</papertitle>
             <br>
-            <a>Yufeng Yue*</a>,
+            <a>Yufeng Yue</a>,
       <strong>Yinan Deng</strong>,
             <a> Jiahui Wang</a>,
-            <a> Yi Yang</a>,
+            <a> Yi Yang*</a>,
             <br>
             <em>IEEE Robotics and Automation Letters (<strong>RAL</strong>) 2025</em>
             <br>
