--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             <a> Yi Yang</a>,
             <a> Mengyin Fu</a>,
             <br>
-            <em><strong>Under Review</strong> 2025</em>
+            <em>IEEE Transactions on Robotics (<strong>TRO</strong>) 2025</em>
             <br>
-            <a href="https://github.com/omnimap123/anonymous_code">[Code]</a> 
-            <a href="https://omnimap123.github.io/">[Project]</a> 
+            <a href="https://github.com/BIT-DYN/omnimapde">[Code]</a> 
+            <a href="https://omni-map.github.io/">[Project]</a> 
             <p></p>
           </td>
         </tr>
