--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <br>
             <em>IEEE Transactions on Robotics (<strong>TRO</strong>) 2025</em>
             <br>
-            <a href="https://github.com/BIT-DYN/omnimapde">[Code]</a> 
+            <a href="https://github.com/BIT-DYN/omnimap">[Code]</a> 
             <a href="https://omni-map.github.io/">[Project]</a> 
             <p></p>
           </td>
