--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src='images/omnimap.gif' width="100%">
           </td>
           <td style="padding:20px;width:70%;vertical-align:middle">
-            <papertitle>OmniMap: A Comprehensive Mapping Framework Integrating Optics, Geometry, and Semantics</papertitle>
+            <papertitle>OmniMap: A General Mapping Framework Integrating Optics, Geometry, and Semantics</papertitle>
             <br>
             <strong>Yinan Deng</strong>,
             <a>Yufeng Yue*</a>,
